# rustimport

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  release  requirements-development.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
examples/: cpython_doublecount.rs  declarative_module.rs  doublecount.rs  minimal.rs  pyo3_basic.rs  pyo3_declarative_module.rs  pyo3_manifest_only_templating.rs  pyo3_minimal.rs  pyo3_no_template.rs  pyo3_structs_and_enums.rs  relative_path_dependency.rs  singlefile.rs  singlefile_manifest_only_templating.rs  singlefile_relative_path_dependency.rs
examples/crate_relative_path_dependency/: Cargo.toml
examples/crate_relative_path_dependency/src/: lib.rs
examples/string_sum/: Cargo.toml
examples/string_sum/src/: lib.rs
examples/test_crate/: .rustimport  Cargo.toml
examples/test_crate/src/: lib.rs
examples/test_workspace/: Cargo.toml
examples/test_workspace/crate_a/: Cargo.toml
examples/test_workspace/crate_a/src/: lib.rs
examples/test_workspace/crate_b/: Cargo.toml
examples/test_workspace/crate_b/src/: lib.rs
examples/test_workspace/crate_c/: Cargo.toml
examples/test_workspace/crate_c/src/: lib.rs
rustimport/: __init__.py  __main__.py  build_module.py  checksum.py  compiler.py  error_handling.py  find.py  import_hook.py  importable.py  importer.py  ipython_magic.py  load.py  settings.py
rustimport/pre_processing/: __init__.py  base.py  pyo3_template.py
tests/: doublecount.rs  minimal.rs  run_all.py  singlefile.rs  singlefile_manifest_only_templating.rs  singlefile_templating.rs  test_cli.py  test_examples.py  test_ipython_magic.py
tests/string_sum/: Cargo.toml
